Title, updated About
Github pages mean I pay literally nothing.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Sarcastify</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -53,7 +53,7 @@
             <p>It is <em>exceedingly</em> annoying to type in the <a href="https://knowyourmeme.com/memes/mocking-spongebob">"spongemock" meme format</a>. Now you can have entire copypasta, easy.</p>
             <p>I'm not collecting any data except basic "page view" analytics.</p>
             <p>I'm not saving any of the text you copy, or even passing it to the server. All the work gets done by your browser. Why in the ever-loving hell would I want to save the stuff put into this?</p>
-            <p>I'm not begging for anything, it costs next to nothing to host this.</p>
+            <p>I'm not begging for anything, it costs nothing to host this.</p>
           <h3>
             Who
           </h3>
