Fixed Mobile layout problems
Thought this was part of the initial commit. Not used to Github.

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
     <footer>
         <ul>
             <li>
-                <a href="#top">back</a>
+                <a href="#top">Back</a>
             </li>
         </ul>    
       </footer>
-      </div>
+    </div>
       
     </section>
 
