--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Place favicon.ico in the root directory -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet"> 
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.css?v=2">
 
   <meta name="theme-color" content="#fafafa">
 </head>
