--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h3>
             Who
           </h3>
-            <p>Just this guy in California. I'm a father and a husband. I build things on the internet. I also get bored from time to time and things like this are sometimes made. I don't really keep any sort of "profile" but <a href="https://www.reddit.com/user/itty53">I am on reddit</a>. A lot. In fact that's the only way to get ahold of me.</p>
+            <p>Just this guy in California. I'm a father and a husband and a software developer most days. I build things on the internet. I also get bored from time to time and things like this are sometimes made. I don't really keep any sort of "profile" but you can <a href="https://beige.party/@itty53" target="_blank">find me on the fediverse</a>. A lot. In fact that's your only option to get ahold of me.</p>
             
     <footer>
         <ul>
