--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet"> 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css?v=3">
-
+  <link rel="icon" type="image/png" href="icon.png" />
   <meta name="theme-color" content="#fafafa">
 </head>
 
